--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
