--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@types/react-table": "^7.7.17",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
     "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
