--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.47.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.17.0",
