--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@types/react-table": "^7.7.17",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.5.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
