--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "i18next-http-backend": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.5.0",
     "react-paginate": "^8.2.0",
